gitops/clusters/primary/store-gateway-preferred.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: store-gateway-preferred
  namespace: store
  labels:
    app: store
    reconcile-trigger: "3"
spec:
  gatewayClassName: gke-l7-regional-external-managed-mc
  addresses:
  - type: NamedAddress
    value: store-regional-gw-ip-central1
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
